# law_assistant

./: README.md  docker-compose.yml
expansion_rag/: .env.example  .gitignore  README.md  dockerfile  pyproject.toml  test_api.py
expansion_rag/src/api/: __init__.py  app.py  models.py
expansion_rag/src/api/core/: __init__.py  document_processor.py  embeddings.py  rag.py
expansion_rag/src/api/data/embeddings/: 20a23146-9391-4a34-b6f1-ae12ccd1e84a.index  20a23146-9391-4a34-b6f1-ae12ccd1e84a.json  311282fb-2792-4f88-9ae1-0fdf13b27b7b.index  311282fb-2792-4f88-9ae1-0fdf13b27b7b.json  36e48f3b-8a2f-43c5-9c81-7607b8a919e0.index  36e48f3b-8a2f-43c5-9c81-7607b8a919e0.json  3ea5f157-7bb5-4557-bcdf-11f8892e9a27.index  3ea5f157-7bb5-4557-bcdf-11f8892e9a27.json  405136cd-c760-43b4-b44a-ecfa487499fa.index  405136cd-c760-43b4-b44a-ecfa487499fa.json  49a58659-bac7-448b-a793-c38eac502470.index  49a58659-bac7-448b-a793-c38eac502470.json  62013b61-45c0-4f00-8687-41b7d4bbeb01.index  62013b61-45c0-4f00-8687-41b7d4bbeb01.json  6230eba1-edb6-4b21-a7e7-c836a80794e8.index  6230eba1-edb6-4b21-a7e7-c836a80794e8.json  626e5265-8a4a-4677-b705-afc417fbdf98.index  626e5265-8a4a-4677-b705-afc417fbdf98.json  626f11c7-758b-47a9-9c48-461e466129c6.index  626f11c7-758b-47a9-9c48-461e466129c6.json  6535a801-933c-40b0-96e2-135c9455be15.index  6535a801-933c-40b0-96e2-135c9455be15.json  6946716e-a003-4db2-b4bb-ecb0ffe8b3d2.index  6946716e-a003-4db2-b4bb-ecb0ffe8b3d2.json  75ea93d9-14d2-4275-a341-3d1a4f93826e.index  (+31 more)
expansion_rag/src/api/routers/: chat.py  documents.py  qa.py
(+25 files in other folders)
